Добавил тест на удаление подзадачи из Epic